--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker Image
-        run: sudo docker build -t my-calc-app .
+        run: docker build -t my-calc-app .
 
       - name: Stop Old Container
        
-        run: sudo docker rm -f $(sudo docker ps -aq) || true
+        run: docker rm -f $(sudo docker ps -aq) || true
 
       - name: Run New Container
-        run: sudo docker run -d -p 80:80 my-calc-app
+        run: docker run -d -p 80:80 my-calc-app
